# codex-fball

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start_web_console.cmd
config/: odds_bookmakers.csv  team_aliases.csv
data/processed/: expected_lineups.csv  fifa_ranking_metadata.json  group_stage_schedule_cst.csv  group_stage_simulation_summary.csv  groups.csv  latest_match_news_33_36.csv  latest_match_news_37_40.csv  manual_team_ratings.csv  market_backtest_summary.csv  market_candidate_scores.csv  market_lines.csv  market_recommendations.csv  match_actual_results.csv  match_context.csv  match_event_stats.csv  match_prediction_inputs.csv  match_prop_prediction_inputs.csv  match_robust_score_probabilities.csv  match_robust_simulation_summary.csv  match_score_probabilities.csv  match_simulation_summary.csv  model_match_inputs.csv  model_run_metadata.csv  pre_match_intelligence_1_8.json  prediction_backtest_summary.csv  probability_calibration_report.csv  public_elo_ratings.csv  recommendation_settlement.csv  result_direction_backtest_1_36.csv  source_notes.md  squad_players.csv  strategy_tier_backtest.csv  (+11 more)
docs/: backtesting_notes.md  odds_collection_plan.md  prediction_framework.md  props_data_plan.md  recommendation_log.md  simulation_model.md  team_squad_tactics_plan.md  windows_task_scheduler.md
scripts/: run_fifa_squad_collection.ps1  run_odds_snapshot.ps1  start_web_console.ps1
src/: web_console.py
tests/: test_market_recommendations.py  test_robust_simulator.py  test_smoke.py  test_web_console.py
(+98 files in other folders)
