[project]
name = "codex-fball"
version = "0.1.0"
description = "2026 FIFA World Cup data collection, feature engineering, and prediction utilities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "pdfplumber>=0.11.0",
    "requests>=2.32.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

